--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset='UTF-8'>
     <!-- mobile -->
     <meta name='viewport' content='width=device-width' />
-    <title>mazegen</title>
+    <title>Maze Generator</title>
     <script type='text/javascript' src='script.js'></script>
   </head>
   <body>
-    <h1>mazegen</h1>
+    <h1>Maze Generator</h1>
   </body>
 </html>
